--- a/Area Calculation/建筑面积&套内面积计算原则.md
+++ b/Area Calculation/建筑面积&套内面积计算原则.md
@@ -1,3 +1,5 @@
+<script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML"> </script>
+
 - 套内面积：计算时分户墙只兜一半，公共部分也只兜一般，阳台在主体外时应该全算，同时也应该考虑公用的分户墙
 
 - 公摊面积的计算方法是，计算标准层面积，原则与套内面积计算相同，但计算是按比例计算。
@@ -6,11 +8,10 @@
     \frac{套内面积总和} {标准层总面积}
     $$
 
-
-    $$
+  - $$
     公摊面积=(1-\frac{套内}{标准层})\times标准层总面积
     $$
 
-    $$
-    
-    $$
+  - 
+
+ ​
