--- a/装修学习.md
+++ b/装修学习.md
@@ -11,3 +11,23 @@
   - 第三层 夹板 （加强）
 - 大门保护，这里肯定要特别注意，拿房应该是已经装好门了
 
+# 卫生间装修
+
+- 卫生间若有位置移动或做垫高时应注意垫高用的材料，不能用废料；以防后期出现渗水等情况。
+- 浴室瓷砖美丑于打底也有一定的关系，打底要有一定的平整性。
+
+# 阳台装修
+
+- 阳台也需要做防水
+- 如果需要考虑覆土的问题，应该如何处理。
+
+# 装修材料等
+
+- [封板](https://www.ikea.cn/cn/zh/catalog/categories/departments/kitchen/23614/)
+
+- 
+
+# 家具品牌
+
+- [nitori](http://www.nitorichina.com/)
+- 
