--- a/装修学习.md
+++ b/装修学习.md
@@ -21,6 +21,12 @@
 - 阳台也需要做防水
 - 如果需要考虑覆土的问题，应该如何处理。
 
+# 客厅装修
+
+- 地面做法
+  - 盘多磨地面（无缝）
+  - 
+
 # 装修材料等
 
 - [封板](https://www.ikea.cn/cn/zh/catalog/categories/departments/kitchen/23614/)
