装修学习目录更新

--- a/装修学习.md
+++ b/装修学习.md
@@ -1,39 +1,14 @@
-# 施工保护
+# 装修目录
 
-- 张贴告示
-  - 告示中的内容应包括：
-    - 开工日期
-    - 施工单位及联系人电话
-- 电梯保护
-- 公共地面保护
-  - 第一层PU防潮布（防水、防渗）对毛坯作用不大，后期可能有用
-  - 第二层 白板（防撞、缓冲）
-  - 第三层 夹板 （加强）
-- 大门保护，这里肯定要特别注意，拿房应该是已经装好门了
+- [施工保护](Decoration Learning/装修保护.md)
+- [卫生间装修](Decoration Learning/卫生间装修.md)
 
-# 卫生间装修
+- [阳台装修](Decoration Learning/阳台装修.md)
 
-- 卫生间若有位置移动或做垫高时应注意垫高用的材料，不能用废料；以防后期出现渗水等情况。
-- 浴室瓷砖美丑于打底也有一定的关系，打底要有一定的平整性。
+- [客厅装修](Decoration Learning/客厅装修.md)
+- [装修材料](Decoration Learning/装修材料.md)
 
-# 阳台装修
+- [贴瓷砖](Decoration Learning/贴瓷砖.md)
 
-- 阳台也需要做防水
-- 如果需要考虑覆土的问题，应该如何处理。
+- [家居品牌](Decoration Learning/家居品牌.md)
 
-# 客厅装修
-
-- 地面做法
-  - 盘多磨地面（无缝）
-  - 
-
-# 装修材料等
-
-- [封板](https://www.ikea.cn/cn/zh/catalog/categories/departments/kitchen/23614/)
-
-- 
-
-# 家具品牌
-
-- [nitori](http://www.nitorichina.com/)
-- 
