--- a/装修学习.md
+++ b/装修学习.md
@@ -1,14 +1,14 @@
 # 装修目录
 
-- [施工保护](Decoration Learning/装修保护.md)
-- [卫生间装修](Decoration Learning/卫生间装修.md)
+- [施工保护](Decoration-Learning/装修保护.md)
+- [卫生间装修](Decoration-Learning/卫生间装修.md)
 
-- [阳台装修](Decoration Learning/阳台装修.md)
+- [阳台装修](Decoration-Learning/阳台装修.md)
 
-- [客厅装修](Decoration Learning/客厅装修.md)
-- [装修材料](Decoration Learning/装修材料.md)
+- [客厅装修](Decoration-Learning/客厅装修.md)
+- [装修材料](Decoration-Learning/装修材料.md)
 
-- [贴瓷砖](Decoration Learning/贴瓷砖.md)
+- [贴瓷砖](Decoration-Learning/贴瓷砖.md)
 
-- [家居品牌](Decoration Learning/家居品牌.md)
+- [家居品牌](Decoration-Learning/家居品牌.md)
 
