--- a/装修学习.md
+++ b/装修学习.md
@@ -1,6 +1,6 @@
 # 装修目录
 
-- [施工保护](Decoration-Learning/装修保护.md)
+- [施工保护](Decoration-Learning/施工保护.md)
 - [卫生间装修](Decoration-Learning/卫生间装修.md)
 
 - [阳台装修](Decoration-Learning/阳台装修.md)
